testsuite/tests/v1/import/importation_cycle/test.out
Error: Dependency cycle
   ╭─[ <working-dir>/foo.lkql:1:1 ]
   │
 1 │ import script
   │ ──────┬──────  
   │       ╰──────── There is a cycle in modules dependency chain (script -> foo -> script)
───╯
Advice: Called in "script.lkql"
   ╭─[ <working-dir>/script.lkql:1:1 ]
   │
 1 │ import foo
───╯
